--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "QM Electronic Medical System to store the medical records",
   "main": "serverStart.js",
   "dependencies": {
+    "assert": "^1.3.0",
     "aws-sdk": "^2.3.10",
     "bcryptjs": "^2.3.0",
     "express": "^4.13.4",
     "grunt": "^1.0.1",
     "kerberos": "file:kerberos",
+    "mocha": "^2.4.5",
     "moment": "^2.13.0",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.16",
     "node-gyp": "^3.3.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-alpha7",
-    "pug-load": "^1.0.3"
+    "pug-load": "^1.0.3",
+    "should": "^8.3.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
