--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "assert": "^1.3.0",
     "aws-sdk": "^2.3.10",
     "bcryptjs": "^2.3.0",
+    "connect-mongo": "^1.2.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "grunt": "^1.0.1",
     "kerberos": "file:kerberos",
     "mocha": "^2.4.5",
